--- a/views/404.html
+++ b/views/404.html
@@ -5,58 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Page Not Found</title>
-    <style>
-      body,
-      html {
-        padding: 0;
-        margin: 0;
-        font-size: sans-serif;
-      }
-    
-      main {
-        padding: 1rem;
-        width: 100%;
-        margin: 0 auto;
-        max-width: 1199px;
-      }
-    
-      .main-header {
-        width: 100%;
-        height: 3.5rem;
-        background-color: #dbc441;
-      }
-    
-      .main-header__nav {
-        height: 100%;
-        display: flex;
-        align-items: center;
-        width: 100%;
-        margin: 0 auto;
-        max-width: 1199px;
-      }
-    
-      .main-header__item-list {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        display: flex;
-      }
-    
-      .main-header__item {
-        margin: 0 1rem;
-        padding: 0;
-      }
-    
-      .main-header__item a {
-        text-decoration: none;
-      }
-    
-      .main-header__item a:active,
-      .main-header__item a.active,
-      .main-header__item a:hover {
-        color: #3e00a1;
-      }
-    </style>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header class="main-header">
