--- a/views/404.pug
+++ b/views/404.pug
@@ -1,18 +1,4 @@
-<!DOCTYPE html>
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title #{docTitle}
-    link(rel="stylesheet", href="/css/main.css")
-  body
-    header(class="main-header")
-      nav(class="main-header__nav")
-        ul(class="main-header__item-list")
-          li(class="main-header__item")
-            a(href="/") Shop
-          li(class="main-header__item")
-            a(href="/admin/add-product") Add Product
-    main
-      h1 404 Sorry cant find that!
+extends layouts/main-layouts.pug
+
+block content
+        h1 404 Sorry cant find that!
